--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -227,6 +227,123 @@
 
             </div>
         </div>
+
+        <!--All ticket modal-->
+        <div class="modal fade" id="ticket-modal" role="dialog">
+            <div class="modal-dialog modal-lg">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Tickets in the system</h4>
+                    </div>
+                    <div class="modal-body" id="ticket-list">
+                        <div class="ticket-row" >
+                            <div class="ticket">
+                                <div class="title process">Thái độ nhân viên
+                                    tệ
+                                </div>
+                                <div>Status:
+                                    <span class="fa fa-circle" style="color: #00d600"></span>
+                                    In Process
+                                </div>
+                                <div>Created by:<span
+                                        style="color: black; font-weight: bold">User</span></div>
+                                <div>Current assignee:<span style="color: black; font-weight: bold">Admin</span>
+                                </div>
+                                <div></div>
+                            </div>
+                            <div class="ticket">
+                                <div class="title process">Thái độ nhân viên
+                                    tệ
+                                </div>
+                                <div>Status:
+                                    <span class="fa fa-circle" style="color: #00d600"></span>
+                                    In Process
+                                </div>
+                                <div>Created by:<span
+                                        style="color: black; font-weight: bold">User</span></div>
+                                <div>Current assignee:<span style="color: black; font-weight: bold">Admin</span>
+                                </div>
+                                <div></div>
+                            </div>
+                            <div class="ticket">
+                                <div class="title solved">
+                                    Galaxy Note 7 phát nổ cần được tư vấn đổi trả
+                                </div>
+                                <div style="color: gray">Status: <span class="fa fa-circle" style="color: gray"></span>
+                                    Solved
+                                </div>
+                                <div style="color: gray">Created by:<span
+                                        style="color: black; font-weight: bold">User</span></div>
+                                <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">Admin</span>
+                                </div>
+                                <div></div>
+                            </div>
+                            <div class="ticket">
+                                <div class="title assigned">
+                                    Hỗ trợ kỹ thuật
+                                </div>
+                                <div style="color: gray">Status: <span class="fa fa-circle"
+                                                                       style="color: #cece00"></span> Assigned
+                                </div>
+                                <div style="color: gray">Created by:<span
+                                        style="color: black; font-weight: bold">User</span></div>
+                                <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">QuyDV</span>
+                                </div>
+                                <div></div>
+                            </div>
+                        </div>
+                        <div class="ticket-row">
+                            <div class="ticket">
+                                <div class="title process">Thái độ nhân viên
+                                    tệ
+                                </div>
+                                <div style="color: gray">Status: <span class="fa fa-circle"
+                                                                       style="color: #00d600"></span> In Process
+                                </div>
+                                <div style="color: gray">Created by:<span
+                                        style="color: black; font-weight: bold">User</span></div>
+                                <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">Admin</span>
+                                </div>
+                                <div></div>
+                            </div>
+                            <div class="ticket">
+                                <div class="title solved">
+                                    Galaxy Note 7 phát nổ cần được tư vấn đổi trả
+                                </div>
+                                <div style="color: gray">Status: <span class="fa fa-circle" style="color: gray"></span>
+                                    Solved
+                                </div>
+                                <div style="color: gray">Created by:<span
+                                        style="color: black; font-weight: bold">User</span></div>
+                                <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">Admin</span>
+                                </div>
+                                <div></div>
+                            </div>
+                            <div class="ticket">
+                                <div class="title assigned">
+                                    Hỗ trợ kỹ thuật
+                                </div>
+                                <div style="color: gray">Status: <span class="fa fa-circle"
+                                                                       style="color: #cece00"></span> Assigned
+                                </div>
+                                <div style="color: gray">Created by:<span
+                                        style="color: black; font-weight: bold">User</span></div>
+                                <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">QuyDV</span>
+                                </div>
+                                <div></div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
         <!--MODALS END HERE-->
 
         <section class="col-lg-3" style="padding: 0px">
@@ -354,114 +471,7 @@
 
         <section class="col-lg-3"
                  style="padding: 0; margin:0px 0px 0px 0px;border-left: 1px solid lightgray; position: relative; height: 100vh;">
-            <div style="margin-bottom: 20px; background-color: inherit">
-                <div style="padding: 0 5px 0 5px">
-                    <div style="background-color: white; text-align: center; margin-bottom: 10px; font-size: 20px; font-weight: bold">
-                        Jack Sparrow
-                    </div>
-
-                    <div style="padding-bottom: 0px; height: 80vh;  overflow: auto">
-                        <ul class="chat">
-                            <li class="left clearfix"><span class="chat-img pull-left"> <img
-                                    src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar"/> </span>
-                                <div class="chat-body clearfix">
-                                    <div class="header">
-                                        <strong class="primary-font">Jack Sparrow</strong>
-                                        <small class="pull-right text-muted">
-                                            12 mins ago
-                                        </small>
-                                    </div>
-                                    <p>
-                                        Xin chào
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="left clearfix"><span class="chat-img pull-left"> <img
-                                    src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar"/> </span>
-                                <div class="chat-body clearfix">
-                                    <div class="header">
-                                        <strong class="primary-font">Jack Sparrow</strong>
-                                        <small class="pull-right text-muted">
-                                            12 mins ago
-                                        </small>
-                                    </div>
-                                    <p>
-                                        Mình cần hỗ trợ
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="left clearfix"><span class="chat-img pull-left"> <img
-                                    src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar"/> </span>
-                                <div class="chat-body clearfix">
-                                    <div class="header">
-                                        <strong class="primary-font">Jack Sparrow</strong>
-                                        <small class="pull-right text-muted">
-                                            12 mins ago
-                                        </small>
-                                    </div>
-                                    <p>
-                                        Về đổi trả Galaxy note 7
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="right clearfix"><span class="chat-img pull-right">
-                            <img src="http://placehold.it/50/FA6F57/fff&text=ME" alt="User Avatar"/>
-                        </span>
-                                <div class="chat-body clearfix">
-                                    <div class="header">
-                                        <small class=" text-muted ">13 mins ago
-                                        </small>
-                                        <strong class="pull-right primary-font">Bhaumik Patel</strong>
-                                    </div>
-                                    <p>
-                                        Chào bạn, chúng tôi đên từ SCC
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="left clearfix"><span class="chat-img pull-left">
-                            <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar"/>
-                        </span>
-                                <div class="chat-body clearfix">
-                                    <div class="header">
-                                        <strong class="primary-font">Jack Sparrow</strong>
-                                        <small class="pull-right text-muted">
-                                            14 mins ago
-                                        </small>
-                                    </div>
-                                    <p>
-                                        Vâng cho mình hỏi thủ tục đổi trả
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="right clearfix"><span class="chat-img pull-right">
-                            <img src="http://placehold.it/50/FA6F57/fff&text=ME" alt="User Avatar"/>
-                        </span>
-                                <div class="chat-body clearfix">
-                                    <div class="header">
-                                        <small class=" text-muted">15 mins
-                                            ago
-                                        </small>
-                                        <strong class="pull-right primary-font">Bhaumik Patel</strong>
-                                    </div>
-                                    <p>
-                                        Để đổi trả bạn hãy mang đến trung tâm bảo hành gần nhất
-                                    </p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <div style="bottom: 0; position: relative;">
-                        <div class="input-group">
-                            <input id="btn-input" type="text" class="form-control input-sm"
-                                   placeholder="Type your message here..."/>
-                            <span class="input-group-btn">
-                            <button class="btn btn-warning btn-sm" id="btn-chat">
-                                Send</button>
-                        </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="messenger" th:include="messenger/mini-messenger"></div>
         </section>
 
     </div>
