Brand infomation page "Your brand"
Move BrandRestController to rest package

--- a/scc-mvc/src/main/resources/templates/SideBar.html
+++ b/scc-mvc/src/main/resources/templates/SideBar.html
@@ -99,9 +99,9 @@
             <li class="header" style="text-align: center">BRAND INFORMATION</li>
             <!--Manage Brand -->
             <li class="treeview">
-                <a href="#">
+                <a href="/brand/index">
                     <i class="fa fa-globe"></i>
-                    <span>Manage Brand</span>
+                    <span>Your Brand</span>
                     <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                     </span>
