--- a/scc-mvc/src/main/resources/templates/SideBar.html
+++ b/scc-mvc/src/main/resources/templates/SideBar.html
@@ -34,7 +34,7 @@
             <li class="header" style="text-align: center">CUSTOMER CARE SERVICE</li>
             <li class="treeview">
                 <a href="/customercare">
-                    <i class="fa fa-ambulance"></i>
+                    <i class="fa fa-user-md"></i>
                     <span>Customer Care</span>
                     <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
@@ -42,7 +42,7 @@
                 </a>
             <li class="treeview">
                 <a href="/messenger">
-                    <i class="fa fa-ambulance"></i>
+                    <i class="fa fa-comments-o"></i>
                     <span>Messenger</span>
                     <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
@@ -102,6 +102,16 @@
                 <a href="/brand/index">
                     <i class="fa fa-globe"></i>
                     <span>Your Brand</span>
+                    <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                    </span>
+                </a>
+            </li>
+            <!--Manage Brand -->
+            <li class="treeview">
+                <a href="/brand/index">
+                    <i class="fa fa-users"></i>
+                    <span>User Management</span>
                     <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                     </span>
