thêm nút add vào ticket cho messenger

--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -11,6 +11,8 @@
     <script src="/js/moment.min.js"></script>
     <script src="/js/messenger.js"></script>
     <link rel="stylesheet" href="/css/scc-post.css">
+    <link rel="stylesheet" href="/css/messenger.css">
+
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 
